update playground to namu v0.2.7

--- a/play/index.css
+++ b/play/index.css
@@ -66,6 +66,10 @@ label#lb_verbose {
     margin-right: 20px;
 }
 
+label.bin_ver {
+    font-size: smaller;
+}
+
 .scrollbar::-webkit-scrollbar {
   width: 6px;
 }
