--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -181,7 +181,8 @@
   a {
     display: block;
     margin: 0 1rem;
-    color: #8C7765;
+    color: #D12C58;
+    font-weight: bold;
     text-decoration: none;
     -webkit-transition: none;
     transition: none;
