update theme css for better again

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -181,7 +181,7 @@
   a {
     display: block;
     margin: 0 1rem;
-    color: #D12C58;
+    color: #ff507f;
     font-weight: bold;
     text-decoration: none;
     -webkit-transition: none;
