--- a/play/index.css
+++ b/play/index.css
@@ -126,7 +126,7 @@ label#lb_verbose {
 
 .scrollbar::-webkit-scrollbar-thumb {
   border-radius: 3px;
-  background-color: #11999e;
+  background-color: #369d44;
 }
 
 .scrollbar::-webkit-scrollbar-button {
