--- a/play/index.css
+++ b/play/index.css
@@ -1,23 +1,3 @@
-textarea#src {
-    width: 100%;
-    height:100%;
-    font-family: Retro Gaming;
-    font-size: 15px;
-    background-color: transparent;
-    resize: none;
-    color: #8ba88c;
-
-    padding-left: 50px;
-    padding-right: 50px;
-
-    flex: 1 0 auto;
-}
-
-textarea#src:focus {
-    outline: none !important;
-    box-shadow: none !important;
-}
-
 iframe#namu {
     width: 100%;
     height:calc(100% - 30px);
@@ -35,49 +15,83 @@ div.initial-content {
     flex-direction: column;
 }
 
+div#codepad textarea, div#codepad pre {
+    font-family: Retro Gaming;
+    line-height: 1em;
+    font-size: 15px;
+    background-color: transparent;
+    word-break: break-all;
+    white-space: break-spaces;
+    padding-left: 50px;
+    padding-right: 50px;
+    flex: 1 0 auto;
+}
+
+div#bottom_pane {
+  display: flex;
+  flex: 1 1 auto;
+}
+
+div#codepad{
+  width: 100%;
+  background-color: #152330;
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+textarea#ta_codepad {
+    position:absolute;
+    color: transparent;
+    z-index: 1;
+    border: none;
+    margin-top: -4px;
+    resize: none;
+    overflow-y: hidden;
+    caret-color: white;
+}
+
+textarea#ta_codepad:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+pre#pre_codepad {
+    height:100%;
+    z-index: 0;
+    margin: 0;
+    text-overflow: ellipsis;
+    color: #618162;
+}
+
+pre#pre_codepad span {
+    word-break: break-all;
+    white-space: break-spaces;
+}
+
+div#result{
+  width:100%;
+  background-color: #204261;
+  display: none;
+}
+
 @media screen and (min-width: 950px) {
   div#bottom_pane {
-    display: flex;
     flex-direction: row;
-    flex: 1 1 auto;
-  }
-
-  div#codepad{
-    width: 100%;
-    background-color: #152330;
-    flex: 1 1 auto;
-    display: flex;
-    flex-direction: column;
   }
 
   div#result{
-    width:100%;
     flex: 1 1 auto;
-    background-color: #204261;
-    display: none;
   }
 }
 
 @media screen and (max-width: 950px) {
   div#bottom_pane {
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 auto;
-  }
-
-  div#codepad{
-    width: 100%;
-    background-color: #152330;
-    flex: 1 1 auto;
-    display: flex;
     flex-direction: column;
   }
 
   div#result{
-    width:100%;
     height: 140px;
-    background-color: #204261;
-    display: none;
   }
 }
 
