--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -35,12 +35,12 @@ body {
   @include breakpoint($large) {
     float: right;
     width: calc(100% - #{$right-sidebar-width-narrow});
-    padding-right: $right-sidebar-width-narrow;
+    padding-right: 10px;
   }
 
   @include breakpoint($x-large) {
     width: calc(100% - #{$right-sidebar-width});
-    padding-right: $right-sidebar-width;
+    padding-right: 10px;
   }
 
   .page__inner-wrap {
@@ -58,6 +58,7 @@ body {
       float: left;
       margin-left: 0;
       margin-right: 0;
+      margin-top: 35px;
       width: 100%;
       clear: both;
     }
@@ -109,7 +110,7 @@ body {
   p,
   li,
   dl {
-    font-size: 1em;
+    /*font-size: 0.8em;*/
   }
 
   /* paragraph indents */
