--- a/play/highlightjs-theme-namu.css
+++ b/play/highlightjs-theme-namu.css
@@ -1,7 +1,12 @@
 pre code.hljs {
     display: block;
     overflow-x: auto;
-    padding: 1em
+    padding: 1em;
+    transition: box-shadow 0.3s ease-in-out;
+}
+pre code.hljs:hover {
+    box-shadow: 0px 0px 23px 1px rgba(45,255,196,0.77);
+    transition: box-shadow 0.3s;
 }
 code.hljs {
     padding:3px 5px
