feat: attach TOC in left sidebar

--- a/_includes/documents-collection.html
+++ b/_includes/documents-collection.html
@@ -8,7 +8,7 @@
   {% assign entries = entries | reverse %}
 {% endif %}
 
-<h4 style="margin-bottom: 1em;">your next<br/> journey is ...</h2>
+<h4 style="margin-bottom: 1em;">to your next journey ...</h2>
 
 {%- for post in entries -%}
   {%- unless post.hidden -%}
