--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -73,14 +73,11 @@
 
 .sidebar__right {
   margin-bottom: 1em;
+  margin-right: 2em;
 
   @include breakpoint($large) {
-    position: absolute;
     top: 0;
     right: 0;
-    width: $right-sidebar-width-narrow;
-    margin-right: -1 * $right-sidebar-width-narrow;
-    padding-left: 1em;
     z-index: 10;
 
     &.sticky {
@@ -97,11 +94,6 @@
         }
       }
     }
-  }
-
-  @include breakpoint($x-large) {
-    width: $right-sidebar-width;
-    margin-right: -1 * $right-sidebar-width;
   }
 }
 
@@ -350,4 +342,3 @@
     margin-right: initial;
   }
 }
-
