feat: add `try it yourself` button on example

--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -12,6 +12,12 @@ journey: true
       $('nav.toc header').click(function() {
         $('ul.toc__menu').toggle(500)
       })
+      $('code.hljs').hover(function() {
+        if($(this).find(".play_button").length) return
+        $(this).append('<a class="play_button" onclick="alert(\'go\');"><span/></a>')
+      }, function() {
+        $('.play_button').remove()
+      })
     })
     hljs.highlightAll();
   </script>
