--- a/play/highlightjs-theme-namu.css
+++ b/play/highlightjs-theme-namu.css
@@ -4,6 +4,67 @@ pre code.hljs {
     padding: 1em;
     transition: box-shadow 0.3s ease-in-out;
 }
+.play_button {
+  transform: translateX(-50%) translateY(-50%);
+  box-sizing: content-box;
+  display: block;
+  width: 24px;
+  height: 33px;
+  position: absolute;
+  /* background: #eb2055; */
+  border-radius: 50%;
+  padding: 18px 20px 18px 28px;
+}
+.play_button:before {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  display: block;
+  width: 41px;
+  height: 41px;
+  background: #ff507f;
+  border-radius: 50%;
+  animation: pulse-border 1100ms ease-out infinite;
+}
+.play_buttton:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  display: block;
+  width: 45px;
+  height: 45px;
+  background: #ff507f;
+  border-radius: 50%;
+  transition: all 200ms;
+}
+.play_button span {
+  display: block;
+  position: relative;
+  z-index: 3;
+  width: 0;
+  height: 0;
+  border-left: 15px solid #fff;
+	border-top: 9px solid transparent;
+  border-bottom: 9px solid transparent;
+  top: 7px;
+  left: 1px;
+}
+@keyframes pulse-border {
+  0% {
+    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1.5);
+    opacity: 0;
+  }
+}
 pre code.hljs:hover {
     box-shadow: 0px 0px 23px 1px rgba(45,255,196,0.77);
     transition: box-shadow 0.3s;
