--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -12,14 +12,27 @@ journey: true
       $('nav.toc header').click(function() {
         $('ul.toc__menu').toggle(500)
       })
+      $('code.language-namu').each(function(index) {
+        $(this).attr("src", this.innerHTML)
+      })
+      hljs.highlightAll();
       $('code.hljs').hover(function() {
+        var codeTag = $(this)[0]
         if($(this).find(".play_button").length) return
-        $(this).append('<a class="play_button" onclick="alert(\'go\');"><span/></a>')
+        $(this).append('<a class="play_button"><span/></a>')
+        $(this).find('a.play_button').click(function() {
+          redirectPlay(codeTag)
+        })
       }, function() {
         $('.play_button').remove()
       })
     })
-    hljs.highlightAll();
+
+    function redirectPlay(codeTag) {
+      var src = $(codeTag).attr("src")
+      localStorage.setItem("src", src)
+      window.location.replace("/play")
+    }
   </script>
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
